<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:fadeScrollbars="true"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">



        <!-- <TextView

             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="WELCOME"
             android:textSize="20dp" />

         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:textColor="@color/lbl_name"
             android:textSize="24dp"
             android:visibility="gone" />

         <TextView
             android:id="@+id/email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="13dp"
             android:visibility="gone" />-->

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:padding="8dp"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="4dp">

            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent">

                <ImageView
                    android:id="@+id/ivMain"
                    android:layout_height="200dp"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/main" />

                <TextView
                    android:background="@null"
                    android:gravity="center_horizontal"
                    android:id="@+id/tvK3Ctimes"
                    android:layout_below="@+id/ivMain"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingTop="4dp"
                    android:text="@string/services"


                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tvAdult"
                    android:layout_below="@+id/tvK3Ctimes"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/adult_service" />

                <TextView
                    android:id="@+id/tvAdultServicetime1"
                    android:layout_below="@+id/tvK3Ctimes"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvAdult"
                    android:layout_width="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/adult_service_time1" />

                <TextView
                    android:id="@+id/tvAdultServicetime2"
                    android:layout_below="@+id/tvAdultServicetime1"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvAdult"
                    android:layout_width="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="8dp"
                    android:text="@string/adult_service_time2" />

                <TextView
                    android:id="@+id/tvChildren"
                    android:layout_below="@+id/tvAdultServicetime2"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/children_service" />

                <TextView
                    android:id="@+id/tvChildrenServicetime1"
                    android:layout_below="@+id/tvAdultServicetime2"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvChildren"
                    android:layout_width="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/adult_service_time1" />

                <TextView
                    android:id="@+id/tvChildrenServicetime2"
                    android:layout_below="@+id/tvChildrenServicetime1"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvChildren"
                    android:layout_width="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="8dp"
                    android:text="@string/adult_service_time2" />

                <TextView
                    android:id="@+id/tvTeens"
                    android:layout_below="@+id/tvChildrenServicetime2"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/teens_service" />

                <TextView
                    android:id="@+id/tvTeensServiceTime"
                    android:layout_below="@+id/tvChildrenServicetime2"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvTeens"
                    android:layout_width="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="8dp"
                    android:text="@string/adult_service_time2" />

                <TextView
                    android:gravity="center_horizontal"
                    android:id="@+id/tvChinese"
                    android:layout_below="@+id/tvTeensServiceTime"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/chinese_service"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/tvKidsChinese"
                    android:layout_below="@+id/tvChinese"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/kids" />

                <TextView
                    android:layout_below="@+id/tvChinese"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvKidsChinese"
                    android:layout_width="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="8dp"
                    android:text="@string/chinese_service_kids" />

                <TextView
                    android:id="@+id/tvAdultChinese"
                    android:layout_below="@+id/tvKidsChinese"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/adult" />

                <TextView
                    android:layout_below="@+id/tvKidsChinese"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvAdultChinese"
                    android:layout_width="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="8dp"
                    android:text="@string/chinese_service_adult" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"

            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="4dp">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/visionHeader"
                    android:textSize="20sp" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="8dp"
                    android:text="@string/vision" />
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <ImageButton
            android:id="@+id/fb"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_width="50dp"
            android:onClick="OpenFbPage"
            android:scaleType="fitXY"
            android:src="@drawable/fb_icon" />


        <Button
            android:background="@color/btn_logut_bg"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:layout_width="fill_parent"
            android:text="@string/btn_logout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>