<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="250dp" />

        <Button
            android:id="@+id/bCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dip"
            android:background="@color/btn_login"
            android:text="@string/contact_call" />

        <Button
            android:id="@+id/bEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dip"
            android:background="@color/btn_login"
            android:text="@string/contact_email" />

        <Button
            android:id="@+id/bfindTgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dip"
            android:background="@color/btn_login"
            android:text="@string/find_a_group" />

        <Button
            android:id="@+id/bServe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dip"
            android:background="@color/btn_login"
            android:text="@string/sign_up_to_serve" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="GIVE"
            android:textSize="20dp" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/account"
                    android:textIsSelectable="true"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingStart="8dp"
                    android:paddingBottom="16dp"
                    android:text="@string/account_k3c"
                    android:textIsSelectable="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/chase"
                    android:textIsSelectable="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/ac"
                    android:textIsSelectable="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingStart="8dp"
                    android:text="NIC Bank: ABC Place Branch "
                    android:textIsSelectable="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingStart="8dp"
                    android:text="A/c No: 1003631423"
                    android:textIsSelectable="true" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/paybill"
                    android:textIsSelectable="true"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/mpesa"
                    android:textIsSelectable="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/mpesa_ac"
                    android:textIsSelectable="true" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/bEmailDev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dip"
            android:background="@color/bg_main"
            android:text="@string/contact_dev" />

    </LinearLayout>


</ScrollView>

